--- a/AMGHaulier.App/AMGHaulier.App/AMGHaulier.App.csproj
+++ b/AMGHaulier.App/AMGHaulier.App/AMGHaulier.App.csproj
@@ -12,4 +12,18 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\AMGHaulier.Common\AMGHaulier.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\AppointmentPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
 </Project>
